Update: Women Build Muscle on 10mg Weekly Rapamycin (Men Need Double the Dose)

--- a/content/posts/rapamycin-pearl-trial-women-benefits.mdx
+++ b/content/posts/rapamycin-pearl-trial-women-benefits.mdx
@@ -1,14 +1,14 @@
 ---
-title: Women Build More Muscle on Half the Rapamycin Dose Men Need
+title: Women Build Muscle on 10mg Weekly Rapamycin (Men Need Double the Dose)
 description: PEARL trial reveals gender differences in rapamycin's anti-aging effects
-date: '2026-02-16'
+date: '2026-02-17'
 category: Clinical Trial
 featured: false
 author: Longevity Leak Research Team
 studyUrl: https://pubmed.ncbi.nlm.nih.gov/40188830/
 published: true
 ---
-# Women Build More Muscle on Half the Rapamycin Dose Men Need
+# Women Build Muscle on 10mg Weekly Rapamycin (Men Need Double the Dose)
 
 ## Key Findings
 
