fix: escape invalid HTML entities in MDX content (< before numbers)

--- a/content/posts/apigenin-natural-sleep-aid.mdx
+++ b/content/posts/apigenin-natural-sleep-aid.mdx
@@ -146,7 +146,7 @@ Quality apigenin supplements:
 ✅ **Generally Well-Tolerated:**
 
 - No serious adverse events in clinical trials up to 200mg/day
-- Mild side effects (<5% incidence): drowsiness, dizziness, mild headache
+- Mild side effects (&lt;5% incidence): drowsiness, dizziness, mild headache
 - No withdrawal symptoms or rebound insomnia reported
 
 ⚠️ **Contraindications - Avoid if:**
