fix: escape invalid HTML entities in MDX content (< before numbers)

--- a/content/posts/berberine-natural-ozempic-weight-loss.mdx
+++ b/content/posts/berberine-natural-ozempic-weight-loss.mdx
@@ -42,7 +42,7 @@ Head-to-head trials show berberine equals metformin efficacy [1], but metformin 
 
 ## Maximizing Absorption
 
-**The Bioavailability Challenge**: Berberine has <5% oral bioavailability - most acts in the gut
+**The Bioavailability Challenge**: Berberine has &lt;5% oral bioavailability - most acts in the gut
 
 **This is actually beneficial**: Gut-localized effects (microbiome modulation) may drive systemic benefits
 
