--- a/content/posts/coq10-mitochondrial-energy-aging.mdx
+++ b/content/posts/coq10-mitochondrial-energy-aging.mdx
@@ -35,7 +35,7 @@ Multiple factors deplete CoQ10:
 1. **Aging** (production drops 50-60% by age 50)
 2. **Statin drugs** (block CoQ10 synthesis as side effect)
 3. **Oxidative stress** (uses up CoQ10 as antioxidant)
-4. **Poor diet** (most people consume <5mg/day; need 100mg+)
+4. **Poor diet** (most people consume &lt;5mg/day; need 100mg+)
 
 The result? **Chronic fatigue, muscle pain, brain fog, cardiovascular decline.**
 
@@ -130,7 +130,7 @@ Q-SYMBIO provides strong evidence for advanced heart failure, but extrapolation 
 
 **Statin Users**: CoQ10 depletion is well-documented - supplementation often recommended (100-200mg/day) [2]
 
-**Side Effects** (uncommon, <5%):
+**Side Effects** (uncommon, &lt;5%):
 - Mild GI upset, insomnia if taken too late in day, rash (rare)
 
 ## Sources
