Upgrade content quality, source citations, and link UX

--- a/content/posts/coq10-mitochondrial-energy-aging.mdx
+++ b/content/posts/coq10-mitochondrial-energy-aging.mdx
@@ -62,8 +62,8 @@ Human trials show CoQ10 supplementation:
 
 CoQ10 comes in two forms:
 
-- **Ubiquinone:** Oxidized form, requires conversion (cheaper)
-- **Ubiquinol:** Reduced (active) form, readily used (more expensive, better for 40+)
+- **Ubiquinone:** Oxidized form that requires conversion
+- **Ubiquinol:** Reduced (active) form that is more directly bioavailable, often preferred after 40+
 
 **If you're over 40 or have health issues, choose ubiquinol**—your body's ability to convert ubiquinone declines with age.
 
