--- a/content/posts/nad-boosters-human-trial-comparison.mdx
+++ b/content/posts/nad-boosters-human-trial-comparison.mdx
@@ -74,7 +74,7 @@ The evidence for NAD+ elevation is strong; evidence for downstream health outcom
 **NMN vs NR considerations**:
 - **NMN**: Absorbed intact through gut transporter (Slc12a8), converts to NAD+ in cells
 - **NR**: Absorbed as NR, phosphorylated by NRK enzymes to NMN, then to NAD+
-- **Both work**: Choose based on tolerance and cost [1]
+- **Both work**: Choose based on tolerance and protocol fit [1]
 
 **Optimization strategies**:
 - **Timing**: Morning on empty stomach (30 min before food) for peak absorption
