--- a/content/posts/sirt3-activators-breakthrough-aging.mdx
+++ b/content/posts/sirt3-activators-breakthrough-aging.mdx
@@ -6,7 +6,7 @@ date: '2026-02-17'
 category: Research
 featured: false
 author: Longevity Leak Research Team
-studyUrl: https://www.ccmbiosciences.com/sirt3-activators-clinical-trial
+studyUrl: https://pubmed.ncbi.nlm.nih.gov/34605238/
 published: true
 ---
 # The Lab-Made Molecule That Outperforms NMN in Alzheimer's Trials
@@ -47,4 +47,4 @@ Additional studies will help clarify optimal dosing, timing, and population-spec
 
 Access the original full-text paper for deeper clinical validation.
 
-[Read Full Study ↗](https://www.ccmbiosciences.com/sirt3-activators-clinical-trial)
+[Read Full Study ↗](https://pubmed.ncbi.nlm.nih.gov/34605238/)
