--- a/content/posts/vitamin-d-telomere-protection-vital.mdx
+++ b/content/posts/vitamin-d-telomere-protection-vital.mdx
@@ -1,5 +1,5 @@
 ---
-title: The $8 Vitamin That Reversed 3 Years of Cellular Aging (VITAL Trial)
+title: The Vitamin That Reversed 3 Years of Cellular Aging (VITAL Trial)
 description: "VITAL trial shows 2,000 IU daily vitamin D3 reduces telomere attrition by 140 base pairs over 4 years"
 date: '2026-02-17'
 category: "Clinical Trial"
@@ -9,7 +9,7 @@ studyUrl: "https://www.sciencedirect.com/science/article/abs/pii/S00029165250025
 published: true
 ---
 
-# The $8 Vitamin That Reversed 3 Years of Cellular Aging (VITAL Trial)
+# The Vitamin That Reversed 3 Years of Cellular Aging (VITAL Trial)
 
 ## Key Findings
 
