--- a/content/posts/magnesium-threonate-brain-health.mdx
+++ b/content/posts/magnesium-threonate-brain-health.mdx
@@ -1,7 +1,7 @@
 ---
 title: "The Only Form of Magnesium That Actually Reaches Your Brain"
 slug: "magnesium-threonate-brain-health"
-study_url: "https://pubmed.ncbi.nlm.nih.gov/?term=magnesium+l-threonate+memory+older+adults+clinical+trial"
+study_url: "https://pubmed.ncbi.nlm.nih.gov/39252819/"
 description: "MIT researchers discovered magnesium L-threonate crosses the blood-brain barrier—improving memory by 15% in clinical trials"
 keywords: ["magnesium threonate", "brain health", "memory supplements", "cognitive enhancement", "magnesium benefits"]
 date: "2026-02-03"
@@ -84,4 +84,4 @@ Quality magnesium L-threonate:
 
 ## Sources
 
-1. [Primary study](https://pubmed.ncbi.nlm.nih.gov/?term=magnesium+l-threonate+memory+older+adults+clinical+trial)
+1. [Primary study](https://pubmed.ncbi.nlm.nih.gov/39252819/)
